Fixing menu to close on seleection on mobile

--- a/client/sass/base/_base.scss
+++ b/client/sass/base/_base.scss
@@ -24,7 +24,7 @@ body {
 
 .page {
   position: relative;
-  font-size: 1.45em;
+  font-size: 1.48em;
   top: 0;
   left: 0;
   padding: 2.3em 3.7em;
@@ -40,6 +40,14 @@ body {
     left: 0em;
     background: white;
     z-index: -1;
+  }
+
+  h3:first-child {
+    margin-bottom: 1.85em;
+  }
+
+  ol {
+    list-style-type: hebrew;
   }
 }
 
@@ -106,13 +114,13 @@ h6{
   font: normal normal bold normal 5em / normal arial;
 }
 h4 {
-  font-size:1.8em;
+  font-size:1.3em;
 }
 h5 {
-  font-size:1.8em;
+  font-size:1.1em;
 }
 h6 {
-  font-size:1.8em;
+  font-size:1em;
 }
 
 p {
