--- a/client/sass/layout/_header.scss
+++ b/client/sass/layout/_header.scss
@@ -36,6 +36,12 @@ header {
   .navbar-default .navbar-nav {
     padding-right: 0;
     &>li {
+      background: none;
+      padding: 0;
+      margin: 0;
+      border: none;
+      float: none;
+
     a {
       color: $text-color;
       font-size: 1.7em;
@@ -106,7 +112,7 @@ header {
       }
     }
   }
-  .navbar-toggle {
+  button.navbar-toggle {
     padding: 1em;
     margin: 2em 1.2em;
   }
@@ -117,6 +123,7 @@ header {
   header .navbar {
     .navbar-nav {
       &>li {
+        float: right;
         a {
           padding-top: 1.2em;
           padding-bottom: 5.8em;
